docs: split CLAUDE.md into per-language guides and add benchmark/release skills